# umbral-rs-web-service

./: .gitignore  Cargo.toml  Dockerfile  README.md
examples/: 1.encrypt.example.json  1.encrypt.response.json  2.kfrags.example.json  2.kfrags.response.json  3.1.reencrypt.example.json  3.1.reencrypt.response.json  3.2.reencrypt.example.json  3.2.reencrypt.response.json  4.decrypt.example.json  5.simple.decrypt.example.json  6.0.key.redistribution.json  6.1.key.redistribution.json  6.2.key.redistribution.json  6.3.key.redistribution.json  6.4.key.redistribution.json  client.txt  key_distrib.sh
js/: NOTES.md  README.md  example.js  main.js  package-lock.json  package.json  start.sh
js/lib/: auth.js  broker.js
js/public/: index.html  threshold.html
js/public/css/: main.css
src/: main.rs
