[package]
name = "auth-api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.0"
umbral-rs = "0.0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
derive_more = "0.99.0"