[package]
name = "umbral-rs-web-service"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.0"
umbral-rs = { path = "../umbral-rs" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
derive_more = "0.99.0"
openssl = "0.10.29"